2014-05-08  Corinna Vinschen  <vinschen@redhat.com>

	* lmaccess.h (struct _USER_INFO_24): Define.

2014-04-24  Corinna Vinschen  <vinschen@redhat.com>

	* mstcpip.h: Add LP64 u_long override.
	* ws2ipdef.h: Ditto.
	* ws2tcpip.h: Ditto.

2014-03-24  Kai Tietz  <ktietz@redhat.com>

	* nap*: Add NAP API.
	* naperror.h: Move content into winerror.h and remove.
	* winerror.h: Add content of naperror.h header.