@@ -261,6 +261,20 @@ HRESULT WINAPI OPMGetVideoOutputsFromIDirect3DDevice9Object(
   ULONG *pulNumVideoOutputs,
   IOPMVideoOutput ***pppOPMVideoOutputArray
 );
+
+#if (_WIN32_WINNT >= 0x0601)
+typedef struct _OPM_GET_CODEC_INFO_INFORMATION {
+  OPM_RANDOM_NUMBER rnRandomNumber;
+  DWORD             Merit;
+} OPM_GET_CODEC_INFO_INFORMATION;
+
+typedef struct _OPM_GET_CODEC_INFO_PARAMETERS {
+  DWORD cbVerifier;
+  BYTE  Verifier[OPM_GET_INFORMATION_PARAMETERS_SIZE - 4];
+} OPM_GET_CODEC_INFO_PARAMETERS;
+
+#endif /*(_WIN32_WINNT >= 0x0601)*/
+
 #ifdef __cplusplus
 }
 #endif
