@@ -1,3 +1,8 @@
+2014-05-20  Jonathan Yong  <10walls@gmail.com>
+
+	* opmapi.h (OPM_GET_CODEC_INFO_INFORMATION): Define.
+	* (OPM_GET_CODEC_INFO_PARAMETERS): Ditto.
+
 2014-05-08  Corinna Vinschen  <vinschen@redhat.com>
 
 	* lmaccess.h (struct _USER_INFO_24): Define.
